fix: attempt at fixing bug
The articles do not how on mobile even though the intersection observer was clearly working. They also appear too small on some tablets.

--- a/components/articles/Articles.module.scss
+++ b/components/articles/Articles.module.scss
@@ -25,10 +25,12 @@
     & .cardsSection {
         display: flex;
         flex-direction: column;
+        align-items: center;
 
-        @include mq(md){
+        @include mq(lg){
             flex-direction: row;
             justify-content: space-between;
+            align-items: unset;
             padding: 4.444444rem 0; //80px
         }
     }
